src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Collections %26 Recoveries Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Not Paid</fullName>
        </values>
        <values>
            <fullName>Closed Paid</fullName>
        </values>
        <values>
            <fullName>Need to Contact</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On-Hold</fullName>
        </values>
        <values>
            <fullName>Open - Need to Contact</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Customer Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>With Tech</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Manual Underwriting</fullName>
        <description>ZOPA-3</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Approved</fullName>
        </values>
        <values>
            <fullName>Closed - Auto Approved</fullName>
        </values>
        <values>
            <fullName>Closed - Auto Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed - Auto Declined</fullName>
        </values>
        <values>
            <fullName>Closed - Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed - Declined</fullName>
        </values>
        <values>
            <fullName>In Progress - Documents Received</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open - Document Received</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Waiting for Loan Consolidation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Tech Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Aborted_Referral_Codes__c</fullName>
        <label>Aborted Referral Codes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccountDCA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DCA</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (DCA)</relationshipLabel>
        <relationshipName>CasesForDCA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountDMC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DMC</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (DMC)</relationshipLabel>
        <relationshipName>CasesForDMC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivePPlan__c</fullName>
        <formula>Loan__r.State__c = &apos;Arrangement&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ActivePPlan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Payment_Plan__c</fullName>
        <formula>AND(
  NOT(ISBLANK(Payment_Plan_Start_Date__c)),
  DATEVALUE(Payment_Plan_Start_Date__c) &lt;=  TODAY(),
  NOT(ISBLANK(Payment_Plan_End_Date__c)),
  DATEVALUE(Payment_Plan_End_Date__c) &gt;=  TODAY()
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Payment Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Referral_Codes__c</fullName>
        <label>All Referral Codes</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ArrearsRatio__c</fullName>
        <description>Arrears ratio from loan object</description>
        <formula>Loan__r.Arrears_Ratio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ArrearsRatio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assign_to_Tech__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign to Tech</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Tech_Time__c</fullName>
        <label>Assigned to Tech Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auto_Canceled_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Canceled Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatic_Cancel_Date__c</fullName>
        <label>Automatic Cancel Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Automatic_Reminder_Date__c</fullName>
        <label>Automatic Reminder Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Broker_DPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broker DPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <formula>Loan_Application__r.Broker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Hours_from_Ownership_to_Closure__c</fullName>
        <formula>ROUND( 8.5 * (
   ( 5 * FLOOR( ( DATEVALUE(    ClosedDate    ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( ClosedDate ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8.5 * ( MOD( ClosedDate - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE(   Date_Owned__c   ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( Date_Owned__c ) - DATE( 1900, 1, 8), 7 ) +
      MIN( 1, 24 / 8.5 * ( MOD( Date_Owned__c - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Hours from Ownership to Closure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hours_to_1st_Response__c</fullName>
        <formula>ROUND( 8.5 * (
   ( 5 * FLOOR( ( DATEVALUE(  First_Response_Time__c  ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( First_Response_Time__c ) - DATE( 1900, 1,8), 7) +
     MIN( 1, 24 / 8.5 * ( MOD( First_Response_Time__c - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE(  CreatedDate  ) - DATE( 1900, 1,8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8), 7 ) +
      MIN( 1, 24 / 8.5 * ( MOD( CreatedDate - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Hours to 1st Response</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hours_to_1st_Tech_Response__c</fullName>
        <formula>ROUND( 8.5 * ( 
( 5 * FLOOR( ( DATEVALUE( Tech_First_Response_Time__c ) - DATE( 1900, 1, 8) ) / 7) + 
MIN(5, 
MOD( DATEVALUE( Tech_First_Response_Time__c ) - DATE( 1900, 1,8), 7) + 
MIN( 1, 24 / 8.5 * ( MOD( Tech_First_Response_Time__c - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1 ) ) ) 
) 
) 
- 
( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1,8) ) / 7) + 
MIN( 5, 
MOD( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8), 7 ) + 
MIN( 1, 24 / 8.5 * ( MOD( CreatedDate - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1) ) ) 
) 
) 
), 
0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Hours to 1st Tech Action</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CT_Rating__c</fullName>
        <label>CT Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CT_Temperature__c</fullName>
        <formula>CASE(1,
If(CONTAINS(Text(CT_Rating__c),&quot;Gold&quot;),1,0),
IMAGE(&quot;/resource/CTGold&quot;,&quot;Gold&quot;,30,30),
If(CONTAINS(Text(CT_Rating__c),&quot;Green&quot;),1,0),
IMAGE(&quot;/resource/CTGreen&quot;,&quot;Green&quot;,30,30),
If(CONTAINS(Text(CT_Rating__c),&quot;Yellow&quot;),1,0),
IMAGE(&quot;/resource/CTYellow&quot;,&quot;Yellow&quot;,30,30),
If(CONTAINS(Text(CT_Rating__c),&quot;Red&quot;),1,0),
IMAGE(&quot;/resource/CTRed&quot;,&quot;Red&quot;,30,30),
IMAGE(&quot;/resource/CTNone&quot;,&quot;None&quot;,30,30)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CT Temperature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Reason__c</fullName>
        <label>Case Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>User_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Issue</fullName>
                </value>
                <value>
                    <fullName>Access to Funds/Rapid returns</fullName>
                </value>
                <value>
                    <fullName>Account Closure</fullName>
                </value>
                <value>
                    <fullName>Account Creation</fullName>
                </value>
                <value>
                    <fullName>Account Discrepancies</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>Add Quick Pay</fullName>
                </value>
                <value>
                    <fullName>Allegation of Fraud in loan application</fullName>
                </value>
                <value>
                    <fullName>Annual Statement Request</fullName>
                </value>
                <value>
                    <fullName>Application by phone - passed to TS agent</fullName>
                </value>
                <value>
                    <fullName>Application by phone - Query</fullName>
                </value>
                <value>
                    <fullName>Application Error</fullName>
                </value>
                <value>
                    <fullName>Application Status (Post-Decision)</fullName>
                </value>
                <value>
                    <fullName>Application Status (Pre-Decision)</fullName>
                </value>
                <value>
                    <fullName>APR Increase/Rate Change</fullName>
                </value>
                <value>
                    <fullName>Arrangement</fullName>
                </value>
                <value>
                    <fullName>Authorisations</fullName>
                </value>
                <value>
                    <fullName>Authorisations / Third Party / POA</fullName>
                </value>
                <value>
                    <fullName>Authorised Third Party contact: General update</fullName>
                </value>
                <value>
                    <fullName>Authorised Third Party contact: Repayment</fullName>
                </value>
                <value>
                    <fullName>Authorised Third party contact – DMC</fullName>
                </value>
                <value>
                    <fullName>Auto-top up</fullName>
                </value>
                <value>
                    <fullName>Bad Debt</fullName>
                </value>
                <value>
                    <fullName>Borrower Call</fullName>
                </value>
                <value>
                    <fullName>Borrower Financial Difficulties</fullName>
                </value>
                <value>
                    <fullName>Borrowing Criteria</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Case Prep</fullName>
                </value>
                <value>
                    <fullName>Change account details</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Decline_Reason__c</fullName>
        <label>Cancel/Decline Reason</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this case related to an applicant wishing to cancel a loan</description>
        <label>Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CasePrepAssignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows if a case has been assigned to Case Prep at any point</description>
        <label>CasePrepAssignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Age_In_Business_Hours__c</fullName>
        <description>The total case age in business hours from open to close.</description>
        <inlineHelpText>The total case age in business hours from open to close.</inlineHelpText>
        <label>Case Age In Business Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Year_Month__c</fullName>
        <formula>TEXT(year(datevalue(ClosedDate))) &amp; &quot;-&quot; &amp; if(MONTH(datevalue(ClosedDate))&gt;9,TEXT(MONTH(datevalue(ClosedDate))),&quot;0&quot; &amp; TEXT(MONTH(datevalue(ClosedDate))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Year-Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CollectCaseAssigmentTimerFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CollectCaseAssigmentTimerFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CollectCaseScheduleChaseFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CollectCaseScheduleChaseFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Faillure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance Faillure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contacts_Made_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of phone calls that user made to contact with the client.</description>
        <label>Contacts Made</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_Incident__c</fullName>
        <formula>&quot;\&quot;&quot; + &quot;https://zopao365.sharepoint.com/Incident%20Management%20Centre/Lists/Incident%20Log/NewForm.aspx?Source=https%3A%2F%2Fzopao365%2Esharepoint%2Ecom%2FIncident%2520Management%2520Centre%2FLists%2FIncident%2520Log%2FAllItems%2Easpx&amp;Title_fa564e0f-0c70-4ab9-b863-0177e6ddd247_$TextField=&quot; + Subject + &quot;\&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Incident</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentUserIsInitialUW__c</fullName>
        <formula>IF( Initial_Underwriter__r.Id  =  $User.Id,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUserIsInitialUW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Due_Date_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Due Date Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Due_Date__c</fullName>
        <label>Custom Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Confirmed_Day_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Confirmed Day Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing (Not a Borrower)</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Brand New (Don&apos;t have an account yet)</fullName>
                </value>
                <value>
                    <fullName>New Customer (Don&apos;t have an approved loan)</fullName>
                </value>
                <value>
                    <fullName>Existing Customer (have an approved loan)</fullName>
                </value>
                <value>
                    <fullName>Marketing (not a lender)</fullName>
                </value>
                <value>
                    <fullName>Brand new (They don&apos;t have an account)</fullName>
                </value>
                <value>
                    <fullName>New Customer (Had an account for less than a month)</fullName>
                </value>
                <value>
                    <fullName>Existing Customer (Had an account for over a month)</fullName>
                </value>
                <value>
                    <fullName>Data Science</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Cash &amp; Payments</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>Account.Expected_Usage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Customer_Contacted__c</fullName>
        <label>Date Customer Contacted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Owned__c</fullName>
        <label>Date Owned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeceasedInAdmin__c</fullName>
        <formula>Loan__r.State__c  = &apos;Deceased&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeceasedInAdmin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefaultInAdmin__c</fullName>
        <formula>Loan__r.State__c = &apos;Default&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DefaultInAdmin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Notice_Sent_Date__c</fullName>
        <label>Default Notice Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>if(AND (NOT(isblank(Custom_Due_Date__c)) , Custom_Due_Date_Approved__c = true), Custom_Due_Date__c ,

if( ISPICKVAL(Priority , &quot;High&quot;) , 
CreatedDate + (4/24),
If ( ISPICKVAL(Priority , &quot;Medium&quot;),
 If(MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7) &gt; 3, CreatedDate + (120/24), CreatedDate + (72/24)),
 If(ISPICKVAL(Priority , &quot;Wishlist&quot;), CreatedDate + (720/24), 
 If(MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7) &gt; 0, CreatedDate + (120/24), 
 
 CreatedDate + (168/24)) 
 )
 )
 
 
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Expression of Dissatisfaction</description>
        <label>EOD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Errored_Referral_Codes__c</fullName>
        <label>Errored Referral Codes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Example__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Example</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Response_Time__c</fullName>
        <label>First Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Time_Fix__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the case been fixed on the first response?</description>
        <label>First Time Fix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Time_Picked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Time Picked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FraudCaseAssignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Assigned by a workflow rule</description>
        <label>FraudCaseAssignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_since_open_date__c</fullName>
        <formula>ROUND((NOW()-CreatedDate)*24,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours since open date</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HyperlinkCase__c</fullName>
        <formula>&apos;https://zopa.my.salesforce.com/&apos; &amp; Id &amp; &apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HyperlinkCase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Underwriter_Date__c</fullName>
        <label>Initial Underwriter Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Underwriter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Underwriter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UnderwriterCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsCollectionCase__c</fullName>
        <formula>RecordType.DeveloperName = &apos;Collections_Recoveries&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCollectionCase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLockedFromUpdatesInProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLockedFromUpdatesInProcess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Case_Currently_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Case_Currently_Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sensitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Sensitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Missed_Arrangement_Payment__c</fullName>
        <formula>Loan__r.Date_Of_Last_Missed_Plan_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Missed Arrangement Payment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <description>Stores the last time the status changed -- used by the Case Business Hours Tools package.</description>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Application</label>
        <referenceTo>Loan_Application__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Status__c</fullName>
        <description>This shows the loan status at the case level</description>
        <formula>Loan__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lumpsum_Calc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lumpsum Calc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MemberID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MovedToUnderwriting__c</fullName>
        <description>Moved to Underwriting date time</description>
        <label>MovedToUnderwriting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__EmailSentTo__c</fullName>
        <label>EmailSentTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMAccountOverride__c</fullName>
        <label>NVMAccountOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMCaseOrigin__c</fullName>
        <description>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</description>
        <inlineHelpText>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</inlineHelpText>
        <label>NVM Case Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMNodeOverride__c</fullName>
        <description>Used to override the NewVoiceMedia node a case routing request is sent to</description>
        <inlineHelpText>Used to override the NewVoiceMedia node a case routing request is sent to</inlineHelpText>
        <label>NVMNodeOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedIn__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged in</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged in</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedIn</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedOut__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged out</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged out</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedOut</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMRoutable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine whether a case should be routed to an agent via NVM</description>
        <inlineHelpText>Used to determine whether a case should be routed to an agent via NVM</inlineHelpText>
        <label>NVMRoutable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__RoutePlanIdentifier__c</fullName>
        <label>RoutePlanIdentifier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Skills__c</fullName>
        <label>Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVM_Type__c</fullName>
        <formula>IF(CONTAINS(Owner:Queue.QueueName,&quot;Lenders&quot;),&quot;Investors&quot;,
IF(CONTAINS(Owner:User.UserRole.Name,&quot;Investor&quot;),&quot;Investors&quot;,
IF(CONTAINS(Owner:Queue.QueueName,&quot;Borrowers&quot;),&quot;Borrowers&quot;,
IF(CONTAINS(Owner:User.UserRole.Name,&quot;Borrowers&quot;),&quot;Borrowers&quot;,
IF(CONTAINS(Owner:Queue.QueueName,&quot;Case Prep&quot;),&quot;Case Prep&quot;,
IF(CONTAINS(Owner:User.UserRole.Name,&quot;Case Prep&quot;),&quot;Case Prep&quot;,
IF(CONTAINS(Owner:Queue.QueueName,&quot;Dealer&quot;),&quot;Case Prep&quot;,
IF(CONTAINS(Owner:User.UserRole.Name,&quot;Case Prep&quot;),&quot;Case Prep&quot;,
IF(CONTAINS(Owner:Queue.QueueName,&quot;Underwriters&quot;),&quot;Underwriters&quot;,
IF(CONTAINS(Owner:User.UserRole.Name,&quot;Underwriter&quot;),&quot;Underwriters&quot;,
IF(CONTAINS(Owner:Queue.QueueName,&quot;Fraud&quot;),&quot;Underwriters&quot;,
IF(CONTAINS(Owner:User.UserRole.Name,&quot;Fraud Underwriter&quot;),&quot;Underwriters&quot;,
IF(CONTAINS(Owner:Queue.QueueName,&quot;TrueConnectivity&quot;),&quot;Underwriters&quot;,
IF(CONTAINS(Owner:User.UserRole.Name,&quot;Underwriter&quot;),&quot;Underwriters&quot;,
IF(CONTAINS(Owner:Queue.QueueName,&quot;Auto&quot;),&quot;Underwriters&quot;,
IF(CONTAINS(Owner:User.UserRole.Name,&quot;Underwriter&quot;),&quot;Underwriters&quot;,
IF(CONTAINS(Owner:Queue.QueueName,&quot;Pending Loan Consolidation&quot;),&quot;Underwriters&quot;,
IF(CONTAINS(Owner:User.UserRole.Name,&quot;Underwriter&quot;),&quot;Underwriters&quot;,
IF(ISPICKVAL(Process__c, &quot;Collections&quot;),&quot;Collections&quot;,
IF(CONTAINS(Owner:Queue.QueueName,&quot;Collections&quot;),&quot;Collections&quot;,
IF(CONTAINS(Owner:User.UserRole.Name,&quot;Collections&quot;),&quot;Collections&quot;,
IF(ISPICKVAL(Process__c,&quot;Recoveries&quot;),&quot;Recoveries&quot;,
IF(CONTAINS(Owner:Queue.QueueName,&quot;Recoveries&quot;),&quot;Recoveries&quot;,
IF(CONTAINS(Owner:User.UserRole.Name,&quot;Recoveries&quot;),&quot;Recoveries&quot;,&quot;&quot;))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NVM Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Chase_Call_Date__c</fullName>
        <label>Next Chase Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Review_Date__c</fullName>
        <label>Next Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>On_Hold_Date__c</fullName>
        <label>On-Hold Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Open_Day__c</fullName>
        <formula>MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>